<resources>
    <string name="app_name">RecopilatorioFinal</string>
    <string name="titulo">Farmacia</string>
    <string name="primerBoton">Cliente</string>
    <string name="segundoBoton">Registrar</string>
    <string name="tercerBoton">Mi carrito</string>
    <string name="cuartoBoton">Pedidos</string>
    <string name="farma">Farmacia Presencia Herrero</string>
    <string name="autor">Maria Presencia Herrero</string>
    <string name="copy">Copyrigth @2016</string>
    <string name="usuario">Usuario:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="eliminar">Eliminar</string>
    <string name="registro">Registrate</string>
    <string name="email">Correo:</string>
    <string name="direccion">Direccion:</string>
    <string name="modificar">Modificar</string>
    <string name="entrar">Entrar</string>
    <string name="boton1">Visualizar</string>
    <string name="boton2">Modificar</string>
    <string name="boton3">Borrar</string>
    <string name="boton4">Actualizar</string>
    <string name="cerrar">Cerrar sesion</string>
    <string name="miCuenta">Mi cuenta</string>
    <string name="atras">Atras</string>
    <string name="informacion">Gracias por descargarte mi aplicacion y por hacer uso de ella</string>
</resources>

