<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="#036513"
        android:text="@string/farma"
        android:id="@+id/copy1"
        android:gravity="center_vertical|center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="#036513"
        android:text="@string/autor"
        android:id="@+id/copy2"
        android:gravity="center_vertical|center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="#036513"
        android:text="@string/copy"
        android:gravity="center_vertical|center" />
</LinearLayout>