<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mariiasmiith.recopilatoriofinal.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/farmacia">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:id="@+id/textView1"
        android:textStyle="bold|italic"
        android:textColor="#1c2d9d"
        android:textSize="50dp"
        android:gravity="center_vertical|center"
        android:layout_weight="0.10"
        android:layout_margin="20dp"
        android:typeface="serif" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/primerBoton"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"
            android:textColor="#1c2d9d"
            android:typeface="serif" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:text="@string/segundoBoton"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"
            android:textColor="#1c2d9d"
            android:typeface="serif" />

</LinearLayout>
